maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:11: error: identifier expected but integer literal found.
      Coord[sol+1]=Coord[sol+1]+marquage(Coord[sol][0],Coord[sol],[1],sol)
                ^ShortestPathMaze:12: error: ']' expected but ';' found.
      Coord[sol]=Coord[sol].tail()
^ShortestPathMaze:12: error: ';' expected but '=' found.
      Coord[sol]=Coord[sol].tail()
                ^ShortestPathMaze:13: error: ';' expected but '=' found.
      Coord[sol]=Coord[sol].tail()
                ^ShortestPathMaze:32: error: illegal start of simple expression
  var L = []
          ^